@@ -378,78 +378,6 @@ range_list<TYPE>::print(FILE *out) const
     }
 }
 
-#ifdef TEST
-
-extern "C" int isatty(int);
-
-void usage()
-{
-}
-
-void prompt()
-{
-  fputs("\n> ", stdout);
-  fflush(stdout);
-}
-
-int
-main()
-{
-  cssc_linebuf linebuf;
-
-  // create & destroy a sid_list first.
-  if (1)
-    {
-      sid_list x;
-    }
-  
-  // Other constructors...
-  if (1)
-    {
-      sid_list a;
-      sid_list b(a);
-      sid_list c = a;
-    }
-  
-  if (!isatty(0))
-    {
-      printf("No interactive test -- stdin is not a tty.\n");
-      return 0;
-    }
-
-  for (prompt(); !linebuf.read_line(stdin); prompt())
-    {
-      linebuf[strlen(linebuf) - 1] = '\0';
-      printf("\"%s\"\n -> ", (const char *) linebuf);
-      
-      sid_list test(linebuf);
-      
-      fputs("\"", stdout);
-      test.print(stdout);
-      fputs("\"", stdout);
-    }
-  return 0;
-}
-
-// Explicit template instantiations -- only when TEST is defined.
-//template class range_list<sid>;
-//template class list<sid>;
-//template class list<mystring>;
-
-//#include "stack.h"
-//template class stack<unsigned short>;
-
-//#include "sid_list.h"
-//template class range_list<release>;
-
-#endif
-                        
-
-                
-/* Local variables: */
-/* mode: c++ */
-/* End: */
-
 #endif /* __SID_LIST_H__ */
         
 /* Local variables: */
